--- a/ny.html
+++ b/ny.html
@@ -78,7 +78,7 @@ footer {
     <ul>
 	  <li><a href="ny.html">NY</a></li>
       <li><a href="bx.html">BX</a></li>
-      <li><a href="#">BK</a></li>
+      <li><a href=""index.html>More Soon</a></li>
     </ul>
   </nav>
   
