--- a/ny.html
+++ b/ny.html
@@ -25,6 +25,12 @@ header {
   color: black;
 }
 
+
+.myDiv {
+
+}
+
+
 /* Create two columns/boxes that floats next to each other */
 nav {
   float: left;
@@ -81,11 +87,16 @@ footer {
       <li><a href=""index.html>More Soon</a></li>
     </ul>
   </nav>
-  
+ 
+
+
     <h1>WELCOME TO THE LARGEST RECREATIONAL MEDICINE DISPENSARY!</h1>
     <p>Now Delivering Through All 5 Boroughs</p>
-    
-<h1>NY</h1>
+
+<div class="myDiv">
+  <img src="images/haze.jpg" alt="HAZE">
+</div>
+
 <footer>
   <p>2023 - NY</p>
 </footer>
