--- a/bx.html
+++ b/bx.html
@@ -82,7 +82,7 @@ footer {
     </ul>
   </nav>
   
-    <h1>WELCOME TO THE LARGEST RECREATIONAL MEDICINE DISPENSARY!</h1>
+    <h1>WELCOME TO THE MOST PRESTIGE SENT IN THE WORLD!</h1>
     <p>Now Delivering Through All 5 Boroughs</p>
     
 <h1>BX</h1>
