--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ footer {
 <body>
 
 <header>
-  <h2><a href="index.html">GLAMOROUS CANDLE</a></h2>
+  <h2><a href="index.html">FUMETA CITY</a></h2>
 </header>
   <nav>
  <h1>STORES</h1> 
